# bigspender

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/bigspender/: main.py
src/bigspender/auth/: __init__.py
src/bigspender/connectors/: __init__.py
src/bigspender/connectors/bcge/: __init__.py  engine.py  model.py
src/bigspender/connectors/viseca/: __init__.py  engine.py  model.py
